--- a/Frontend/src/Components/reserver/Reserver.css
+++ b/Frontend/src/Components/reserver/Reserver.css
@@ -53,10 +53,11 @@
   flex-direction: column; 
   width: 100%;
 }
+/*here*/
 
-input[type="date"],
-input[type="text"],
-select {
+.input[type="date"],
+.input[type="text"],
+.select {
   display: inline-block;
   width: 300px; 
   padding: 10px;
@@ -90,7 +91,7 @@ select {
   color: black;
 }
 
-textarea {
+.textarea {
   flex: 1; 
   width: calc(100% - 200px);
   padding: 10px;
