--- a/Frontend/src/Pages/design/signIn.css
+++ b/Frontend/src/Pages/design/signIn.css
@@ -47,8 +47,8 @@
   background-color: #f0f0f0;
   transform: scale(1.05);
 }
-
-label {
+/*here*/
+.label {
   font-size: 1.2rem;
   margin-bottom: 10px;
   color: BLACK;
@@ -71,10 +71,12 @@ label {
   color: #B4B4B8;
   text-decoration: none;
 }
+/*here*/
 
-input::placeholder {
+.input::placeholder {
   color: #CCCCCC;
 }
+/*here*/
 
 
 * {
@@ -82,7 +84,7 @@ input::placeholder {
   padding: 0;
   box-sizing: border-box;
 }
-
+/*
 body {
   font-family: 'Poppins', sans-serif;
   font-synthesis: none;
@@ -96,7 +98,7 @@ body {
   background-size: cover;
   background-position: center;
 }
-
+*/
 .wrapper {
   width: 100%;
   background: white;
