--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,29 +1,4 @@
-/*.app{
-    width: 100vw; 
-  height: 100vh; 
-  display: flex;
-  overflow-x: hidden; 
-  flex-direction: column; 
 
-
-}
-body{
-    margin: 0;
-    padding: 0;
-    
-}
-.sidebar {
-  width: 250px;
-  background-color: white;
-  border-right: 2px solid rgba(0, 0, 0, 0.1);
-  padding: 15px;
-  height: calc(100vh - 80px);
-}
-
-.content {
-  flex: 1;
-  padding: 20px;
-}*/
 .app {
   display: flex;
 }
@@ -37,6 +12,6 @@ body{
 }
 
 .userprf {
-  margin-left: auto; /* Déplace le profil utilisateur vers la droite */
-  padding: 20px; /* Ajoutez d'autres styles au besoin */
+  margin-left: auto; 
+  padding: 20px;
 }
