--- a/Frontend/src/Pages/Profile/Profile.css
+++ b/Frontend/src/Pages/Profile/Profile.css
@@ -26,6 +26,29 @@
 }
 
 
+.profile-picture{
+    margin-top: 100px;
+    align-items: center;
+}
 
+.profile-picture{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+    border-radius: 50%;
+}
+
+.profile-picture button{
+    border-radius: 50%;
+}
+
+.profile-picture img{
+    border-radius: 50%;
+}
+.p-image {
+    border-radius: 50%;
+    border: 2px solid #000; /* Optional: Add a border to the profile picture */
+}
 
 
