--- a/Frontend/src/Pages/Profile/Profile.css
+++ b/Frontend/src/Pages/Profile/Profile.css
@@ -1,6 +1,6 @@
 .profile-container {
-    margin: 50px;
-    margin-top: 100px;
+    margin-top: 0px;
+    margin: 30px;
 }
 
 .choose-button{
@@ -22,7 +22,10 @@
     border: 1px solid #e5e7eb;
     padding: 20px;
     background-color: #f9fafb;
-    width: 700px;
+   /* width: 700px;
+    height: 350px;*/
+    width: 80%;
+    height: 87%;
 }
 
 
@@ -52,3 +55,57 @@
 }
 
 
+
+
+
+.profile-update {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 100vh;
+}
+
+
+
+.inputs-container {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    margin: 70px;
+    margin-left: 100px;
+
+}
+
+.inputs-container h5 {
+    margin-bottom: 10px;
+}
+
+.inputs-container input {
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.inputs-container button {
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    background-color: #840b0b;
+    color: white;
+    cursor: pointer;
+}
+
+.inputs-container button:hover {
+    background-color: #b10909;
+}
+
+div .profile-update{
+    margin-left: 0;
+}
+
+.submit-button {
+    width: 50%;
+    margin-top: 20px;
+    margin-left: 27px;
+}
