--- a/Frontend/src/Pages/design/signIn.css
+++ b/Frontend/src/Pages/design/signIn.css
@@ -1,6 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-.sign-in-container,
-.forgot-password-container {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: 'Poppins', sans-serif;
+}
+
+.sign-in-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,178 +15,101 @@
   background-image: url('../../assets/audito.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed; /* Fixe l'image de fond */
 }
-
-.sign-in-form,
-.forgot-password-form {
-  width: 400px;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  align-items: center;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.form-inputs input {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #BCBCBC;
-  border-radius: 10px;
-  transition: border-color 0.3s, box-shadow 0.3s;
-}
-
-.sign-in-container button,
-.forgot-password-container button {
-  width: 100%;
-  padding: 10px;
-  margin-top: 20px;
-  border: none;
-  border-radius: 25px;
-  background-color: #630000;
-  color: #fff;
-  cursor: pointer;
-  transition: background-color 0.3s, transform 0.3s;
-}
-
-.sign-in-container button:hover,
-.forgot-password-container button:hover {
-  background-color: #f0f0f0;
-  transform: scale(1.05);
-}
-/*here*/
-.label {
-  font-size: 1.2rem;
-  margin-bottom: 10px;
-  color: BLACK;
-}
-
-.forgot-password-form h2 {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
-  text-align: center;
-  margin-bottom: 10px;
-  color: #1F7794;
-}
-
-#create-account {
-  color: #C4C4C4;
-}
-
-#create-account-link,
-#forgot-password-link,
-#sign-in-link {
-  color: #B4B4B8;
-  text-decoration: none;
-}
-/*here*/
-
-.input::placeholder {
-  color: #CCCCCC;
-}
-/*here*/
-
-
-*{
-  margin: 0;
-  padding: 0;
-}
-
-
 
 .wrapper {
   width: 100%;
-  background: white;
-  border: 2px solid rgba(255, 255, 255, 0.2);
-  backdrop-filter: blur(30px);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  color: #fff;
+  max-width: 400px;
+  background: rgba(255, 255, 255, 0.8);
   border-radius: 10px;
   padding: 20px;
-  display: grid;
-  grid-gap: 20px;
-  justify-items: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; /* Ajouté pour centrer verticalement */
+  text-align: center; /* Ajouté pour centrer horizontalement */
+  margin-top: 7%;
 }
 
 .wrapper h1 {
-  color: black;
-  font-size: 20px;
-  text-align: center;
+  color: #000;
+  font-size: 24px;
+  margin-bottom: 20px;
 }
 
 .input-box {
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  margin-bottom: 20px;
+}
+
+.input-box label {
+  font-size: 14px;
+  color: #000;
+  margin-bottom: 5px;
 }
 
 .input-box input {
   width: 100%;
-  height: 80%;
-  background: transparent;
-  border: 2px solid #bcbcbc;
-  outline: none;
-  border-radius: 40px;
-  font-size: 16px;
-  color: #7b7b7b;
-  padding: 20px 45px 20px 20px;
-  font-weight: 700;
-}
-
-.input-box label {
-  color: black;
-  font-size: 15px;
-  font-weight: 700;
-  margin-bottom: 5px;
-}
-
-.wrapper button {
-  width: 100%;
-  height: 45px;
-  background-color: #630000;
-  border: none;
-  outline: none;
+  padding: 10px;
+  border: 1px solid #bcbcbc;
   border-radius: 25px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  cursor: pointer;
-  font-size: 16px;
-  color: #fff;
-  font-weight: 500;
-  margin-top: 5px;
-  margin-bottom: 20px;
-}
-
-.wrapper button:hover {
-  background-color:  #f0f0f0;
-}
-
-.login-link {
-  font-size: 11px;
-  text-align: center;
-  margin-top: 20px;
+  font-size: 14px;
 }
 
 .forgot-password {
-  font-size: 11px;
-  margin-top: 5px;
-  margin-bottom: 10px;
-  color : #B4B4B8;
+  width: 100%;
+  text-align: right;
+  margin-bottom: 20px;
 }
 
-.login-link p a,
-.reset-pwd a,
-#forgot-password-link {
+.forgot-password-link {
   color: #1c7895;
   text-decoration: none;
   font-weight: 700;
 }
 
-.login-link p {
+.forgot-password-link:hover {
+  text-decoration: underline;
+}
+
+.wrapper button {
+  width: 100%;
+  padding: 10px;
+  background-color: #630000;
+  border: none;
+  border-radius: 25px;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.3s;
+}
+
+.wrapper button:hover {
+  background-color: #f0f0f0;
+  color: #000;
+  transform: scale(1.05);
+}
+
+.login-link {
+  font-size: 12px;
+  text-align: center;
+}
+
+#create-account {
   color: #c4c4c4;
 }
 
-.reset-pwd a:hover,
-.login-link a:hover,
-#forgot-password-link:hover {
+#create-account-link {
+  color: #1c7895;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+#create-account-link:hover {
   text-decoration: underline;
+}
+
+* {
+  box-sizing: border-box;
 }
